# rd-cli

./: .env  CLAUDE.md  LICENSE  README.md  patchnotes.md  pyproject.toml  roadmap.md  spec.md
src/rd_cli/: __init__.py  __main__.py  api.py  cli.py  client.py  commands.py  config.py  errors.py  output.py  pinboard.py  sync.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_output.py  test_pinboard.py  test_sync.py
